Tue Jun 29 21:16:05 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* ext/stringio/stringio.c (strio_write): add RB_GC_GUARD.

Tue Jun 29 14:41:07 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_realpath_internal, realpath_rec): skip UNC share root
	  on DOSISH platforms.
	  http://pc12.2ch.net/test/read.cgi/tech/1272248179/600

Tue Jun 29 06:41:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter (fix
	  [ruby-core:30358]). And hide a root window before starting eventloop.

	* ext/tk/extconf.rb: use tclConfig.sh/tkConfig.sh when frameworks
	  are enabled on MacOS X.

	* ext/tk/stubs.c: dirty hack for frameworks and stubs on MacOS X.

Tue Jun 29 01:44:33 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* ext/dl/lib/dl/func.rb (call): don't overwrite original arguments
	  to defend from GC.
	* test/dl/test_func.rb (test_string): add test for above.

Tue Jun 29 01:41:42 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* include/ruby/ruby.h (static inline rb_gc_guarded_ptr): prevent
	  RB_GC_GUARD_PTR being removed by optimization.

Tue Jun 29 01:22:08 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/fiddle.h: added FFI type detection to avoid bug in ffi
	  header files. Thanks Yugui! [ruby-core:30917]

Sun Jun 27 23:31:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h, io.c: reverted r21709.

	* ruby.c (load_file_internal): nothing to read if EOF reached
	  while reading shebang.  [ruby-core:30910]

Sun Jun 27 13:25:07 2010  Tanaka Akira  <akr@fsij.org>

	* io.c (simple_sendfile): don't try to send data more than SSIZE_MAX
	  with single sendfile call..
	  based on the patch by Eric Wong.  [ruby-core:30908]

Sun Jun 27 10:41:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems/require_paths_builder.rb (write_require_paths_file_if_needed):
	  no reason that bin directory should be included in $LOAD_PATH.