@@ -1751,109 +1751,10 @@ rb_mod_const_defined(int argc, VALUE *argv, VALUE mod)
     return RTEST(recur) ? rb_const_defined(mod, id) : rb_const_defined_at(mod, id);
 }
 
-/*
- *  call-seq:
- *     obj.methods    -> array
- *
- *  Returns a list of the names of public and protected methods of
- *  <i>obj</i>. This will include all the methods accessible in
- *  <i>obj</i>'s ancestors.
- *
- *     class Klass
- *       def kMethod()
- *       end
- *     end
- *     k = Klass.new
- *     k.methods[0..9]    #=> [:kMethod, :freeze, :nil?, :is_a?,
- *                        #    :class, :instance_variable_set,
- *                        #    :methods, :extend, :__send__, :instance_eval]
- *     k.methods.length   #=> 42
- */
-
-static VALUE
-rb_obj_methods(int argc, VALUE *argv, VALUE obj)
-{
-  retry:
-    if (argc == 0) {
-	VALUE args[1];
-
-	args[0] = Qtrue;
-	return rb_class_instance_methods(1, args, CLASS_OF(obj));
-    }
-    else {
-	VALUE recur;
-
-	rb_scan_args(argc, argv, "1", &recur);
-	if (RTEST(recur)) {
-	    argc = 0;
-	    goto retry;
-	}
-	return rb_obj_singleton_methods(argc, argv, obj);
-    }
-}
-
-/*
- *  call-seq:
- *     obj.protected_methods(all=true)   -> array
- *
- *  Returns the list of protected methods accessible to <i>obj</i>. If
- *  the <i>all</i> parameter is set to <code>false</code>, only those methods
- *  in the receiver will be listed.
- */
-
-static VALUE
-rb_obj_protected_methods(int argc, VALUE *argv, VALUE obj)
-{
-    if (argc == 0) {		/* hack to stop warning */
-	VALUE args[1];
-
-	args[0] = Qtrue;
-	return rb_class_protected_instance_methods(1, args, CLASS_OF(obj));
-    }
-    return rb_class_protected_instance_methods(argc, argv, CLASS_OF(obj));
-}
-
-/*
- *  call-seq:
- *     obj.private_methods(all=true)   -> array
- *
- *  Returns the list of private methods accessible to <i>obj</i>. If
- *  the <i>all</i> parameter is set to <code>false</code>, only those methods
- *  in the receiver will be listed.
- */
-
-static VALUE
-rb_obj_private_methods(int argc, VALUE *argv, VALUE obj)
-{
-    if (argc == 0) {		/* hack to stop warning */
-	VALUE args[1];
-
-	args[0] = Qtrue;
-	return rb_class_private_instance_methods(1, args, CLASS_OF(obj));
-    }
-    return rb_class_private_instance_methods(argc, argv, CLASS_OF(obj));
-}
-
-/*
- *  call-seq:
- *     obj.public_methods(all=true)   -> array
- *
- *  Returns the list of public methods accessible to <i>obj</i>. If
- *  the <i>all</i> parameter is set to <code>false</code>, only those methods
- *  in the receiver will be listed.
- */
-
-static VALUE
-rb_obj_public_methods(int argc, VALUE *argv, VALUE obj)
-{
-    if (argc == 0) {		/* hack to stop warning */
-	VALUE args[1];
-
-	args[0] = Qtrue;
-	return rb_class_public_instance_methods(1, args, CLASS_OF(obj));
-    }
-    return rb_class_public_instance_methods(argc, argv, CLASS_OF(obj));
-}
+VALUE rb_obj_methods(int argc, VALUE *argv, VALUE obj);
+VALUE rb_obj_protected_methods(int argc, VALUE *argv, VALUE obj);
+VALUE rb_obj_private_methods(int argc, VALUE *argv, VALUE obj);
+VALUE rb_obj_public_methods(int argc, VALUE *argv, VALUE obj);
 
 /*
  *  call-seq:
